--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@ var dialogCancel=function(){
 //弹框End
 
 function shagnchuan(blob){
+	alert(blob)
 	var TestApi="http://nk5hsa.natappfree.cc/wav-test";//用来在控制台network中能看到请求数据，测试的请求结果无关紧要
 
 	//-----↓↓↓以下才是主要代码↓↓↓-------
