--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ function updateFile(key){
 		var cls=RandomKey(16);
 		var name="rec-"+o.time+"ms-"+o.set.bitRate+"kbps-"+o.set.sampleRate+"hz."+o.set.type;
 		alert(name)
-		shagnchuan(o)
+		shagnchuan(o.blob)
 	};
 }
 
