--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ function shagnchuan(blob){
 		}
 		,error:function(s){
 			reclog("上传失败",s);
-			reclog(s);
+			reclog(JSON.stringify(s));
 		}
 	});
 }
