--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@ function shagnchuan(blob){
 		url:api //上传接口地址
 		,type:"POST"
 		,dataType:"text"
+		,contentType:false //让xhr自动处理Content-Type header，multipart/form-data需要生成随机的boundary
+		,processData:false //不要处理data，让xhr自动处理
 		,data:form
 		,success:function(v){
 			reclog(v);
