--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ RandomKey.idx=0;
 		采样率: <input type="text" class="sample" value="16000" style="width:60px"> hz，越大细节越丰富
 	</div>
 	<div class="pd btns">
-		<button onclick="recopen()">打开录音</button>
+		<button onclick="recopen()">打开录音1</button>
 		<button onclick="recclose()">关闭录音</button>
 	</div>
 	<div class="pd btns">
